# catalyst-benchmarks

./: .gitignore  N4_BENCHMARK_STRATEGY.md  README.md  animate_inference.py  check_training.py  clockInfo.txt  do_setup.sh  do_upload.sh  iter_27_CongestedCLBsAndNets.txt  iter_4_CongestedCLBsAndNets.txt  iter_7_CongestedCLBsAndNets.txt  launch_gpu0_queue.py  launch_gsc_v11.sh  launch_n3_queue.py  launch_training.py  overnight_runner.sh  pyproject.toml  results.json  run_all.sh  run_all_n3.sh  run_dvs_after_sleep.sh  sweep.py  test_smoke.py  tight_setup_hold_pins.txt  visualize.py
asl_dvs/: loader.py  train.py
cifar10_dvs/: loader.py  train.py
common/: __init__.py  augmentation.py  deploy.py  deploy_n3.py  neurons.py  neurons_n3.py  training.py
continual_learning/: train_sleep.py
dvs_gesture/: deploy.py  eval_n3.py  loader.py  train.py
ecg_arrhythmia/: loader.py  train.py
gsc_kws/: deploy.py  eval_n3.py  loader.py  train.py  train_v2.py  train_v3.py  train_v4.py
huggingface/: shd_model_card.md  upload.py
kan_synapse/: train.py
mackey_glass/: loader.py  train.py
mitbih/: loader.py  train.py
n3_results/: N3_BENCHMARKS.md
ncaltech101/: loader.py  train.py
ncars/: loader.py  train.py
neurobench/: submit.py
nmnist/: README.md  deploy.py  eval_n3.py  loader.py  train.py  train_v2.py
ntidigits/: loader.py  train.py
pattern_gen/: loader.py  train.py
poker_dvs/: loader.py  train.py
primate_reach/: loader.py  train.py
psmnist/: loader.py  train.py
scifar10/: loader.py  train.py
shd/: README.md  deploy.py  eval_n3.py  loader.py  train.py  (+4 more)
(+15 files in other folders)
